<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:id="@+id/tvLogo"
        android:text="Scheduler"
        android:textSize="30sp"
        android:textColor="@color/logo"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="150dp"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/etEmail"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:textSize="14sp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:id="@+id/etPassword"
        android:inputType="textPassword"
        android:hint="@string/hint_Password"
        android:textSize="14sp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_gravity="center"
        />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:id="@+id/llbutton"
        android:layout_gravity="center">
        <Button
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:id="@+id/btLogin"
            android:text="@string/button_Login"
            android:textColor="@color/white"
            android:background="@color/dark_gray"
            android:layout_gravity="center_vertical"/>

        <Button
            android:layout_width="140dp"
            android:layout_height="40dp"
            android:id="@+id/btRegister"
            android:text="@string/button_Register"
            android:textColor="@color/white"
            android:background="@color/dark_gray"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"/>
    </LinearLayout>

</LinearLayout>

