<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EventCreateActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvYearEventCreate"
        android:text="Year"
        android:textSize="30sp"
        android:textStyle="normal"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvDateEventCreate"
            android:text="DateView"
            android:textSize="55sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/etCategoryEventCreate"
            android:hint="@string/hint_category"
            android:textColorHint="@color/dark_gray"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:background="@drawable/rectangle"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="10dp"/>

        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/etTitleEventCreate"
            android:hint="@string/hint_title"
            android:textColorHint="@color/dark_gray"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:background="@drawable/rectangle"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:padding="10dp"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/text_event_start"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:layout_marginTop="10dp" />

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tpStartTimeEventCreate"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:timePickerMode="spinner" />

        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tpFinishTimeEventCreate"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:timePickerMode="spinner" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="260dp"
            android:id="@+id/etContentEventCreate"
            android:hint="Content"
            android:textSize="14sp"
            android:textStyle="normal"
            android:textColor="@color/dark_gray"
            android:background="@drawable/rectangle"
            android:gravity="center_vertical"
            android:layout_gravity="center"
            android:padding="10dp"
            android:layout_marginTop="10dp" />

        <Button
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/btCreateEventCreate"
            android:text="@string/button_event_create"
            android:textSize="16sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            android:background="@color/bg_color"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</ScrollView>